50/50 working auth
