# internal/docs/swagger.json
@@ -30,6 +30,53 @@
                 }
             }
         },
+        "/auth/login": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Login get",
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            },
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Login post",
+                "parameters": [
+                    {
+                        "description": "credentials",
+                        "name": "tag",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Login"
+                        }
+                    }
+                ],
+                "responses": {
+                    "301": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/project/": {
             "get": {
                 "consumes": [
@@ -398,6 +445,17 @@
                 "taskTitle": {
                     "type": "string",
                     "example": "task name"
+                }
+            }
+        },
+        "models.Login": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         },
